<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/m_l_i_h"
    android:layout_margin="@dimen/m_l_i_m"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/m_l_i_h"
        android:layout_height="@dimen/m_l_i_h"
        android:contentDescription="@string/m_l_i_i_t"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/m_l_i_t_h"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/m_l_i_t_m"
            android:text="@string/m_l_i_t_t"
            android:textSize="@dimen/m_l_i_t_s"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/m_l_i_t_m"
            android:text="@string/m_l_i_t_h"
            android:textSize="@dimen/m_l_i_h_s" />
    </LinearLayout>

</LinearLayout>